syntax = "proto3";

package codehorse.mkube.statefulset;

option go_package = "github.com/solodba/devcloud/mkube/apps/statefulset";

// 导入外部包
import "apps/statefulset/pb/statefulset.proto";

// StatefulSet相关功能接口
service RPC {
    // 创建StatefulSet
    rpc CreateStatefulSet(CreateStatefulSetRequest) returns(StatefulSet);
    // 删除StatefulSet
    rpc DeleteStatefulSet(DeleteStatefulSetRequest) returns(CreateStatefulSetRequest);
    // 更新StatefulSet
    rpc UpdateStatefulSet(UpdateStatefulSetRequest) returns(StatefulSet);
    // 查询StatefulSet
    rpc QueryStatefulSet(QueryStatefulSetRequest) returns(StatefulSetSet);
    // 查询StatefulSet详情
    rpc DescribeStatefulSet(DescribeStatefulSetRequest) returns(CreateStatefulSetRequest);
}

// DeleteStatefulSetRequest结构体
message DeleteStatefulSetRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}

// UpdateStatefulSetRequest结构体
message UpdateStatefulSetRequest {
    // @gotags: bson:"StatefulSet" json:"StatefulSet"
    CreateStatefulSetRequest StatefulSet = 1;
}

// QueryStatefulSetRequest结构体
message QueryStatefulSetRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"keyword" json:"keyword"
    string Keyword = 2;
}

// DescribeStatefulSetRequest结构体
message DescribeStatefulSetRequest {
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 1;
    // @gotags: bson:"name" json:"name"
    string Name = 2;
}